# Fang_TS-Foundation

./: README.md
open_source/TS-Foundation-clean/: LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
open_source/TS-Foundation-clean/5_26数据集/: sft_test.json
open_source/TS-Foundation-clean/configs/: demo_dpo.yaml  demo_eval.yaml  demo_sft.yaml
open_source/TS-Foundation-clean/data/: README.md
open_source/TS-Foundation-clean/data/sample_dpo/: target_domain_dpo_sample.json
open_source/TS-Foundation-clean/data/sample_sft/: energy_sample.json  finance_sample.json  weather_sample.json
open_source/TS-Foundation-clean/examples/: predict_from_json.py  quick_start.py
open_source/TS-Foundation-clean/scripts/: run_all_tests.sh  run_demo_dpo.sh  run_demo_eval.sh  run_demo_sft.sh
open_source/TS-Foundation-clean/src/tsfoundation/: __init__.py
open_source/TS-Foundation-clean/src/tsfoundation/data/: __init__.py  collator.py  dataset.py  serialization.py
open_source/TS-Foundation-clean/src/tsfoundation/evaluation/: __init__.py  evaluate.py  inference.py  metrics.py
open_source/TS-Foundation-clean/src/tsfoundation/training/: __init__.py  peft_utils.py  train_dpo.py  train_sft.py
open_source/TS-Foundation-clean/src/tsfoundation/utils/: __init__.py  config.py  io.py
open_source/TS-Foundation-clean/tests/: test_dataset.py  test_inference_format.py  test_metrics.py
