[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tsfoundation"
version = "0.1.0"
description = "Clean research implementation for instruction-based time-series forecasting."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "TS-Foundation Authors"}]

[tool.setuptools.packages.find]
where = ["src"]

